--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,4 +22,4 @@ jobs:
         KEY: ${{ secrets.SSHKEY }}
       with:
         source: "index.html"
-        target: "/home/var/www"
+        target: "/var/www/html"
